--- a/Aplikacija/Frontend/lab_zakazivanje/package.json
+++ b/Aplikacija/Frontend/lab_zakazivanje/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
     "react-time-picker": "^8.0.2",
     "web-vitals": "^2.1.4"
   },
