--- a/Aplikacija/Frontend/lab_zakazivanje/package.json
+++ b/Aplikacija/Frontend/lab_zakazivanje/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-regular-svg-icons": "^7.2.0",
     "@fortawesome/free-solid-svg-icons": "^7.2.0",
     "@fortawesome/react-fontawesome": "^3.2.0",
+    "@microsoft/signalr": "^10.0.0",
     "@tanstack/react-table": "^8.21.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
