--- a/Aplikacija/Backend/LabZakazivanjeAPI/appsettings.json
+++ b/Aplikacija/Backend/LabZakazivanjeAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "Dashboard": {
+    "RunOnceAt": "2026-02-24T15:30:00Z"
+  }
 }
